Thu Oct 18 16:44:07 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (rb_add_method_cfunc, rb_add_method_cfunc_frameless):
	  check arity earlier at definition time.

Thu Oct 18 15:11:31 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c: add `inline' keyword to several functions.
	  Compilers (gcc) are conservative than I expected.

Thu Oct 18 15:01:15 2012  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: add a decl. of
	  `rb_define_frameless_method()'.

Thu Oct 18 14:31:17 2012  Koichi Sasada  <ko1@atdot.net>

	* compile.c (new_callinfo): set a temporary index of callinfo
	  (used in `iseq_set_sequence()') to rb_call_info_t::aux::index.
	  rb_call_info_t::argc is initialiesed by same value of
	  rb_call_info_t::orig_argc.

Thu Oct 18 14:11:08 2012  Koichi Sasada  <ko1@atdot.net>

	* class.c (rb_define_frameless_method): rename from
	  rb_define_method_fast(). Defined method with this C API
	  does not make a method frame. It is bit lightweight than
	  ordinal C functions. Now only 0 or 1 argc are permitted.

	* method.h (VM_METHOD_TYPE_CFUNC_FRAMELESS): rename macro name
	  from VM_METHOD_TYPE_CFUNC_FAST.

	* vm_insnhelper.c, vm_method.c: rename related functions.

	* proc.c (rb_method_entry_arity): catch up above changes.

Thu Oct 18 10:30:34 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (assignable_gen): fail if yyerror occurred.  fix a bug in
	  r36973.

Thu Oct 18 09:23:03 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* hash.c (initialize_copy): duping should rehash the hash.

	* test/ruby/test_hash.rb: added a test to ensure rehash.

Wed Oct 17 21:16:47 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* common.mk (WPROGRAM): need same dependencies as PROGRAM.

	* cygwin/GNUmakefile.in (uncommon.mk): move include position
	  below WPROGRAM definition to be defined in uncommon.mk.

	* ext/extmk.rb (all, static): fix make rubyw.exe failure with make -jN.