@@ -1,3 +1,10 @@
+Thu Oct 18 17:31:58 2012  Koichi Sasada  <ko1@atdot.net>
+
+	* insns.def (opt_send_simple): introduce new instruction used
+	  when no need to care about block and splat.
+
+	* compile.c: use the `opt_send_simple' instruction.
+
 Thu Oct 18 16:44:07 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* vm_method.c (rb_add_method_cfunc, rb_add_method_cfunc_frameless):
